# TailoredExact

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Manuscript/: build_latex.ps1  compile_log.txt  compile_status.md  generated_results.tex  macros.tex  main.tex  references.bib
docs/: adaptive_frontier_split_lifetime_fix.md  adaptive_relaxation_portfolio_selector.md  algorithm_report.md  attempt_log.md  auto_interval_oracle_all_leaves.md  automatic_bpc_fallback_after_oracle_timeout.md  automatic_bpc_fallback_in_sealed_pipeline.md  automatic_interval_bpc_fallback.md  automatic_interval_oracle_closure.md  automatic_interval_oracle_in_sealed_pipeline.md  bc_activation_diagnostic_effectiveness_report.md  bc_activation_diagnostic_v2.md  benchmark_instance_policy.md  bpc_ablation_table.csv  bpc_branching_strategy.md  bpc_core_repair_targets.md  bpc_cut_separation.md  bpc_failure_diagnosis.md  bpc_fallback_current_role.md  bpc_fallback_on_unresolved_intervals.md  bpc_fallback_retest_after_relaxation.md  bpc_improvement_attempt.md  bpc_interval_diagnostics.csv  bpc_leaf_ablation_analysis.md  bpc_leaf_closure_after_strengthened_oracle.md  bpc_leaf_closure_diagnosis.md  bpc_leaf_closure_result.md  bpc_leaf_data_consistency_audit.md  bpc_leaf_domain_transfer.md  bpc_leaf_domain_transfer_v2.md  bpc_leaf_validation_report.md  bpc_long_baseline_diagnosis.md  bpc_parallel_table.csv  bpc_rmp_seeding.md  bpc_rmp_seeding_and_cuts.md  bpc_tree_plateau_diagnosis.md  bucket_integer_inventory_domain_tightening.md  bucket_ratio_domain_tightening.md  bucket_required_movement.md  cache_parallel_determinism_audit.md  (+220 more)
include/: Bounds.hpp  Branching.hpp  CanonicalCompactModel.hpp  Column.hpp  ColumnGeneration.hpp  ColumnPool.hpp  ConnectivityFlow.hpp  ControllingLeafScheduler.hpp  CplexBaseline.hpp  Cuts.hpp  DenseProgress.hpp  Evaluator.hpp  ExternalGiniTree.hpp  FileSha256.hpp  FixedIntervalMipBackend.hpp  GiniBranching.hpp  GiniFrontierGeometry.hpp  GurobiBaseline.hpp  GurobiCertificate.hpp  GurobiProgress.hpp  HgaTgbcRunner.hpp  Instance.hpp  IntervalRowFactory.hpp  Logger.hpp  Master.hpp  MipStartMapping.hpp  ModelCorrectness.hpp  PaperExternalGiniTree.hpp  Parser.hpp  Pricing.hpp  ProcessPhaseLedger.hpp  ReplicaExternalGiniTree.hpp  Result.hpp  StationSet.hpp  StrictCertificate.hpp  TailoredBC.hpp  TailoredBCCallbacks.hpp  TailoredBCCplexApi.hpp  TailoredBCCuts.hpp  TailoredExact.hpp
reference/: Paper Draft 2.docx  README_reference_bundle.md  box_exact.py  bpc_branch_probe.json  bpc_gini_cuts.py  bpc_gini_frontier.py  bpc_implementation_report.tex  bpc_parallel_test_results.json  bpc_test_results_updated.json  ccbi_exact.py  codex_goal_prompt_exact_ebrp.txt  codex_goal_prompt_exact_ebrp_v2.txt  codex_upload_manifest.md  ebrp_problem_model_spec.md  equity_brp_tailored_exact_interim_report.tex  exact_method_attempts_summary.json  gcap_benders.py  gcap_exact.py  gf_rl_bpc_cuts_report.tex  latest_exact_attempt_summary.json  master_relax.py  milp_strong.py  regen_candidate_V12_M1_average.txt  regen_candidate_V12_M1_high.txt  regen_candidate_V12_M1_low.txt  regen_candidate_V12_M2_average.txt  regen_candidate_V12_M2_high.txt  regen_candidate_V12_M2_low.txt  res_avg.json  root_mippricing_cuts_results_complete.json  spatial_exact.py
results/: alt_strengthened_v10_m1_average_300s.json  alt_strengthened_v10_m2_average_300s.json  alt_strengthened_v10_m2_average_300s.meta.json  alt_strengthened_v10_m2_low_1200s.json  alt_strengthened_v10_m2_low_1200s.meta.json  alt_strengthened_v10_m2_low_300s.json  alt_strengthened_v12_m1_average_300s.json  alt_strengthened_v12_m2_average_300s.json  boundsmoke_v10_m1_pool.json  boundsmoke_v12_m1_pool.json  campaign_v10_m1_average_pool_bounds_1200s.json  campaign_v10_m2_low_pool_bounds_1200s.json  campaign_v12_m1_average_pool_bounds_1200s.json  campaign_v12_m2_average_pool_bounds_1200s.json  closure3600_v10_m1_average_strong_bpcseed.json  closure3600_v10_m1_average_strong_bpcseed.meta.json  closure3600_v12_m1_average_strong_bpcseed.json  closure3600_v12_m1_average_strong_bpcseed.meta.json  closure7200_v12_m1_average_strong_bpcseed.json  closure7200_v12_m1_average_strong_bpcseed.meta.json  compare_v10_m2_average.csv  compare_v8_m1_average.csv  compare_v8_m1_high.csv  compare_v8_m1_low.csv  compare_v8_m2_average.csv  compare_v8_m2_average_current.csv  compare_v8_m2_high.csv  compare_v8_m2_low.csv  current2_cplex_v10_m1_average_plain_300s.json  current2_cplex_v10_m2_low_plain_300s.json  current2_cplex_v12_m1_average_plain_300s.json  current2_cplex_v12_m2_average_plain_300s.json  current_cplex_v10_m1_average_plain_300s.json  current_cplex_v12_m1_average_plain_300s.json  current_cplex_v8_m1_high_plain_300s.json  current_cplex_v8_m2_average_plain_120s.json  cuts_after_subsetrow_change.json  dyn12_v10_m2_average_frontier_routemask_relax20_refine18_1200s.json  dyn16_v10_m2_average_frontier_routemask_relax20_refine18_1200s.json  dyn4_v10_m1_average_frontier_300s.json  (+248 more)
scripts/: aggregate_bpc_repair_round.py  analyze_round23_official_results.py  analyze_round23_retained_evidence.py  analyze_round26_forensics.py  analyze_round26_results.py  analyze_round27_results.py  analyze_round28_results.py  analyze_round29_development.py  analyze_round29_phase_a.py  analyze_round29_results.py  analyze_round30_c0_forensics.py  analyze_round30_development.py  analyze_round30_results.py  audit_alternative_gini_formulations.py  audit_bpc_certificate.py  audit_bpc_leaf_data.py  audit_bucket_integer_inventory_domain.py  audit_bucket_ratio_domain_tightening.py  audit_bucket_required_movement.py  audit_callback_relaxation_vector_export.py  audit_callback_vector_family_parser.py  audit_certificate_sources.py  audit_compact_bc_effectiveness.py  audit_disaggregated_sp_estimator.py  audit_gf_compact_bc_summary.py  audit_gs_h_product_coupling.py  audit_hardware_fairness.py  audit_low_gini_cut_validity.py  audit_lp_snapshot_integrity.py  audit_model_identity.py  audit_no_cross_round_result_mixing.py  audit_no_instance_special_cases.py  audit_no_v_threshold_paper_core.py  audit_objective_convention.py  (+101 more)
(+18055 files in other folders)
